chore<wip>: Update author information and enhance documentation
- Added comprehensive documentation comments in src/index.ts outlining package features and quick start guide.
- Removed redundant main.ts file and cleaned up example imports in demo.ts.
- Deleted outdated pagination example from examples directory.
- WIP JSDoc
- WIP make verbose are configurable at demo example
- WIP make browserPath are configurable at demo example

Signed-off-by: Hanivan Rizky Sobari <hanivan20@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nestjs-js-parser",
   "version": "0.0.1",
   "description": "A powerful NestJS module for parsing HTML content with JavaScript support using Playwright Core",
-  "author": "Your Name <your.email@example.com>",
+  "author": "Hanivan Rizky Sobari <hanivan20@gmail.com>",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
