refactor: Rename package to nestjs-browser-parser and update import paths
- Changed package name from 'nestjs-js-parser' to 'nestjs-browser-parser' in package.json.
- Updated import statements in src/index.ts to reflect the new package name.

Signed-off-by: Hanivan Rizky Sobari <hanivan20@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-js-parser",
+  "name": "nestjs-browser-parser",
   "version": "0.0.1",
   "description": "A powerful NestJS module for parsing HTML content with JavaScript support using Playwright Core",
   "author": "Hanivan Rizky Sobari <hanivan20@gmail.com>",
